--- a/parts/header.jade
+++ b/parts/header.jade
@@ -2,7 +2,7 @@ header
 	.container
 		nav
 			.logo-container
-				img.logo(src="images/svg/logo.svg" width="43" height="48")
+				.logo(src="images/svg/alt-logo.svg")
 				.logo-text-container
 					img.logo-text(src="images/svg/logo-text.svg" width="74" height="16")
 					.company-subname You Need Web
