--- a/parts/menu.jade
+++ b/parts/menu.jade
@@ -2,7 +2,7 @@
 	.menu-item
 		a(href="#") About
 	.menu-item
-		a(href="#") Services
+		a(href="/services") Services
 	.menu-item
 		a(href="#") Portfolio
 	.menu-item
