--- a/services/index.jade
+++ b/services/index.jade
@@ -15,19 +15,32 @@ html(lang="en")
 				.title-header We provide:
 				.title-option
 					.option-name Onsite Developer/Team
-					.option-checkbox
 				.title-option
 					.option-name Working Space/Equipment for team members
-					.option-checkbox.checked
 				.title-option
 					.option-name PM
-					.option-checkbox.checked
 				.title-option
 					.option-name QA
-					.option-checkbox.checked
 				.title-option
 					.option-name Developer/Team engage ONLY with your project
-					.option-value On Demand
+				.title-option
+					.option-name Fast Start of the Project
+				.title-option
+					.option-name PM methodology
+				.title-option
+					.option-name Instant feedback
+				.title-option
+					.option-name Cardidates interview
+				.title-option
+					.option-name Client’s engagement in the project
+				.title-option
+					.option-name Estimates
+				.title-option
+					.option-name Support
+				.title-option
+					.option-name Charges
+				.title-option
+					.option-name Quality
 				.title-option.last
 			.services-slides.swipeshow
 				.slides
@@ -53,6 +66,33 @@ html(lang="en")
 						.slide-option
 							.option-name Developer/Team engage ONLY with your project
 							.option-value On Demand
+						.slide-option
+							.option-name Fast Start of the Project
+							.option-checkbox.checked
+						.slide-option
+							.option-name PM methodology
+							.option-checkbox.checked
+						.slide-option
+							.option-name Instant feedback
+							.option-checkbox.checked
+						.slide-option
+							.option-name Cardidates interview
+							.option-checkbox.checked
+						.slide-option
+							.option-name Client’s engagement in the project
+							.option-value On Demand
+						.slide-option
+							.option-name Estimates
+							.option-checkbox.checked
+						.slide-option
+							.option-name Support
+							.option-checkbox.checked
+						.slide-option
+							.option-name Charges
+							.option-value Monthly Payment
+						.slide-option
+							.option-name Quality
+							.option-checkbox.checked
 						.slide-option.button
 							button(role="button") Get more info
 						.slide-option.footer
@@ -69,16 +109,43 @@ html(lang="en")
 							.option-checkbox
 						.slide-option
 							.option-name Working Space/Equipment for team members
-							.option-checkbox.checked
+							.option-checkbox
 						.slide-option
 							.option-name PM
-							.option-checkbox.checked
+							.option-value On Demand
 						.slide-option
 							.option-name QA
-							.option-checkbox.checked
+							.option-value On Demand
 						.slide-option
 							.option-name Developer/Team engage ONLY with your project
+							.option-checkbox.checked
+						.slide-option
+							.option-name Fast Start of the Project
+							.option-checkbox.checked
+						.slide-option
+							.option-name PM methodology
 							.option-value On Demand
+						.slide-option
+							.option-name Instant feedback
+							.option-checkbox.checked
+						.slide-option
+							.option-name Cardidates interview
+							.option-checkbox.checked
+						.slide-option
+							.option-name Client’s engagement in the project
+							.option-checkbox.checked
+						.slide-option
+							.option-name Estimates
+							.option-checkbox.checked
+						.slide-option
+							.option-name Support
+							.option-value On Demand
+						.slide-option
+							.option-name Charges
+							.option-value Monthly Rates
+						.slide-option
+							.option-name Quality
+							.option-checkbox.checked
 						.slide-option.button
 							button(role="button") Get more info
 						.slide-option.footer
@@ -92,19 +159,46 @@ html(lang="en")
 							.slide-right
 						.slide-option
 							.option-name Onsite Developer/Team
-							.option-checkbox
+							.option-checkbox.checked
 						.slide-option
 							.option-name Working Space/Equipment for team members
-							.option-checkbox.checked
+							.option-checkbox
 						.slide-option
 							.option-name PM
-							.option-checkbox.checked
+							.option-checkbox
 						.slide-option
 							.option-name QA
-							.option-checkbox.checked
+							.option-checkbox
 						.slide-option
 							.option-name Developer/Team engage ONLY with your project
+							.option-checkbox.checked
+						.slide-option
+							.option-name Fast Start of the Project
+							.option-checkbox.checked
+						.slide-option
+							.option-name PM methodology
 							.option-value On Demand
+						.slide-option
+							.option-name Instant feedback
+							.option-checkbox.checked
+						.slide-option
+							.option-name Cardidates interview
+							.option-checkbox.checked
+						.slide-option
+							.option-name Client’s engagement in the project
+							.option-checkbox.checked
+						.slide-option
+							.option-name Estimates
+							.option-checkbox.checked
+						.slide-option
+							.option-name Support
+							.option-checkbox
+						.slide-option
+							.option-name Charges
+							.option-value %
+						.slide-option
+							.option-name Quality
+							.option-checkbox.checked
 						.slide-option.button
 							button(role="button") Get more info
 						.slide-option.footer
