--- a/styl/general.styl
+++ b/styl/general.styl
@@ -341,6 +341,9 @@ footer
 					display: flex
 					.menu-item
 						margin: 0 1rem
+						&:hover
+							a
+								color: white
 			.contacts
 				margin: 0
 				text-align: left
