--- a/styl/services/services.styl
+++ b/styl/services/services.styl
@@ -117,6 +117,7 @@
 				display: flex
 				flex-direction: column
 				flex: 1
+				max-width: 18rem
 				.title-option, .title-header
 					background-color: #f3f8ff
 					font-size: 13px
@@ -124,6 +125,7 @@
 					letter-spacing: 0.3px
 					text-align: left
 					color: #8492af
+					border-top: 1px solid #e3eaf3
 				.title-option
 					padding: 1rem
 				.title-header
@@ -134,10 +136,18 @@
 					justify-content: flex-end
 				.title-option.last
 					flex: 1
+			.title-option, .slide-option
+				height: 62px
+				display: flex
+				align-items: center
+				&.button, &.footer
+					height: auto
 			.swipeshow
 				flex: 1
 				.slide-option
 					justify-content: center
+					.option-value
+						text-align: center
 					.option-name
 						display: none
 		@media screen and (min-width: $screenMedium)
@@ -148,6 +158,7 @@
 			.swipeshow
 				.slides
 					width: auto !important
+					transform: none !important
 				.slide
 					width: 100%
 					visibility: visible
