--- a/parts/header.jade
+++ b/parts/header.jade
@@ -1,11 +1,9 @@
 header
 	.container
 		nav
-			.logo-container
-				.logo(src="/images/svg/alt-logo.svg")
+			a(href="/").logo-container
+				.logo
 				.logo-text-container
-					img.logo-text(src="/images/svg/logo-text.svg" width="74" height="16")
-					.company-subname You Need Web
 			.menu-container
 				include menu
 		#toggle-navbar
