--- a/parts/menu.jade
+++ b/parts/menu.jade
@@ -1,11 +1,11 @@
 .menu-list
-	.menu-item
-		a(href="#") About
-	.menu-item
-		a(href="/services") Services
-	.menu-item
-		a(href="#") Portfolio
-	.menu-item
-		a(href="#") Team
-	.menu-item
-		a(href="#") Contact Us
+	a(href="/")
+		.menu-item About
+	a(href="/services")
+		.menu-item Services
+	a(href="#")
+		.menu-item Portfolio
+	a(href="#")
+		.menu-item Team
+	a(href="/contact-us")
+		.menu-item Contact Us
