--- a/styl/index.styl
+++ b/styl/index.styl
@@ -1,6 +1,7 @@
 @import 'variables'
 @import 'general'
-@import 'services/services'
+@import 'services'
+@import 'contact-us'
 
 #landing
 	padding-top: 3rem
