--- a/parts/footer.jade
+++ b/parts/footer.jade
@@ -14,7 +14,7 @@ footer
 			address Kiev, Ukraine, 02140, Bazhana Ave 24/1, Office 118
 			p
 				span Tel:
-				a(href="tel:380955914765") 3-8099-461-2335
+				a(href="tel:380955914765") +38 099 4612335
 			p
 				span Email:
 				a(href="mailto:info@uneedweb.com?subject=Contact UNeed Web") info@uneedweb.com
