--- a/services/index.jade
+++ b/services/index.jade
@@ -94,7 +94,8 @@ html(lang="en")
 							.option-name Quality
 							.option-checkbox.checked
 						.slide-option.button
-							button(role="button") Get more info
+							button(role="button")
+								a(href="/outsource") Get more info
 						.slide-option.footer
 							a(href="#") Get Started Now
 					.slide
@@ -102,7 +103,7 @@ html(lang="en")
 							.slide-left
 							.slide-header
 								img.service-image(src="/images/gif/outstaff.gif" width="100" height="100")
-								p Development of the Project
+								p Dedicated Development Team
 							.slide-right
 						.slide-option
 							.option-name Onsite Developer/Team
@@ -147,7 +148,8 @@ html(lang="en")
 							.option-name Quality
 							.option-checkbox.checked
 						.slide-option.button
-							button(role="button") Get more info
+							button(role="button")
+								a(href="/outstaff") Get more info
 						.slide-option.footer
 							a(href="#") Get Started Now
 					.slide
@@ -155,7 +157,7 @@ html(lang="en")
 							.slide-left
 							.slide-header
 								img.service-image(src="/images/gif/relocation.gif" width="100" height="100")
-								p Development of the Project
+								p Developer for relocation
 							.slide-right
 						.slide-option
 							.option-name Onsite Developer/Team
@@ -200,7 +202,8 @@ html(lang="en")
 							.option-name Quality
 							.option-checkbox.checked
 						.slide-option.button
-							button(role="button") Get more info
+							button(role="button")
+								a(href="/relocation") Get more info
 						.slide-option.footer
 							a(href="#") Get Started Now
 
@@ -210,5 +213,5 @@ html(lang="en")
 
 		include ../parts/footer
 		include ../parts/scripts
-		script(type="text/javascript" src="/js/services/index.js")
+		script(type="text/javascript" src="/js/services.js")
 
